<resources>

<!--        <string name="ads_app" translatable="false">ca-app-pub-6259903680658283~1724096937</string>-->
<!--        <string name="ads_open" translatable="false">ca-app-pub-6259903680658283/7276656579</string>-->
<!--        <string name="ads_irc" translatable="false">127c3651d</string>-->
<!--        <string name="id_pay" translatable="false">com.igallery.iosgallery.forandroid.pro</string>-->

    <string name="ads_app" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ads_open" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="ads_irc" translatable="false">11240204d</string>
    <string name="id_pay" translatable="false">android.test.purchased</string>


    <string name="app_name" translatable="false">IGallery</string>
    <string name="action_photos">Photos</string>
    <string name="action_foryou">For You</string>
    <string name="settings">Settings</string>
    <string name="action_albums">Albums</string>
    <string name="action_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_album">My Albums</string>
    <string name="favorite">Favorite</string>
    <string name="utilities">Utilities</string>
    <string name="photos">Photos</string>
    <string name="video">Videos</string>
    <string name="hide">Hide</string>
    <string name="recently_deleted">Recently deleted</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all">Delete All</string>
    <string name="recover_all">Recover All</string>
    <string name="delete">Delete</string>
    <string name="recover">Recover</string>
    <string name="select_all">Select All</string>
    <string name="select1">  Select  </string>
    <string name="cancel1">  Cancel  </string>
    <string name="no_favorite_photo_or_video">No favorite photo or video</string>
    <string name="edit">Edit</string>
    <string name="detail">Detail</string>
    <string name="select_item">Select item</string>
    <string name="date">Date</string>
    <string name="year">Years</string>
    <string name="month">Months</string>
    <string name="day">Days</string>
    <string name="all">All Photos</string>
    <string name="photo_video_place">Photo, video, place</string>
    <string name="photo_and_video">Photo and video</string>
    <string name="see_all">See All</string>
    <string name="collapse">Collapse</string>
    <string name="place">Places</string>
    <string name="items"> items</string>
    <string name="item">item</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_to_bin">Move to Trash</string>
    <string name="exit">Exit</string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="no_item_selected">0 item selected</string>
    <string name="selected"> selected</string>
    <string name="fifteen">Photos and videos show the days remaining before deletion. After that time, items will be permanently deleted. This may take up to 15 days.</string>
    <string name="thirdty">Photos and videos show the days remaining before deletion. After that time, items will be permanently deleted. This may take up to 30 days.</string>
    <string name="recover_done">Recover successfully</string>
    <string name="delete_done">Delete successfully</string>
    <string name="recover_fail">Recover fail</string>
    <string name="delete_fail">Delete fail</string>
    <string name="no_item_selected_1">No item selected</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="press_back_againt">Press back againt to exit!</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="aspect">Aspect</string>
    <string name="square">Square</string>
    <string name="recently_search">Recently search</string>
    <string name="clear">Clear</string>
    <string name="no_results">No Results</string>
    <string name="no_results_1">There were no results for</string>
    <string name="no_results_2">. Try a new search.</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="new_album">New Album</string>
    <string name="new_folder">New Folder</string>
    <string name="enter_new_album_name">Enter a name for this album.</string>
    <string name="enter_new_folder_name">Enter a name for this folder.</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="please_enter_a_name_for_new_album">Please enter a name for new album</string>
    <string name="please_enter_a_name_for_new_folder">Please enter a name for new folder</string>
    <string name="want_to_delete">Are you sure you want to delete permanently this items?</string>
    <string name="want_to_move_to_trash">Items will be permanently deleted after 30 days in Trash.</string>
    <string name="done">Done</string>
    <string name="add_item_to_album">Add item to </string>
    <string name="duplicate_name">Duplicate name.</string>
    <string name="delete_album">Delete Album</string>
    <string name="want_to_delete_album">Are you sure you want to delete the album</string>
    <string name="photo_not_delete">The photos will not be deleted.</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="delete_item_in_album">Are you sure you want to remove it from the album?. The items will not be deleted from memory.</string>
    <string name="item_moved_to_trash">Item moved to trash.</string>
    <string name="share">Share</string>
    <string name="delete_from_library">Delete from Library</string>
    <string name="more">More</string>
    <string name="remove_from_album">Remove from Album</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="more_apps">More Apps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="no_email">No email</string>
    <string name="go_premium">Go Premium - No Ads</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="no_photo_or_video">No Photos or Videos</string>
    <string name="photo">Photo</string>
    <string name="video_1">Video</string>
    <string name="videos">Videos</string>
    <string name="add">Add</string>
    <string name="library">Library</string>
    <string name="add_photos">Add Photos</string>
    <string name="rename_album">Rename Album</string>
</resources>