<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray2"

        android:layout_centerHorizontal="true"
        app:cardCornerRadius="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNewAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/new_album"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_album_name"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtNewAlbum"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edtTitleAlbum"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_below="@+id/txtTitle"
                android:hint="@string/title"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/shape_bottom_sheet"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:padding="@dimen/_6sdp"/>
            <TextView
                android:id="@+id/txtDuplicateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtTitleAlbum"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/duplicate_name"
                android:textColor="@color/black"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/txtRuler"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@+id/edtTitleAlbum"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray4"/>
            <LinearLayout
                android:layout_below="@+id/txtRuler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtCancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:gravity="center"
                    android:textColor="@color/red1"
                    android:textSize="@dimen/_14sdp"/>
                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray4"/>
                <TextView
                    android:id="@+id/txtSave"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textColor="@color/gray6"
                    android:gravity="center"
                    android:textSize="@dimen/_14sdp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>