<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/_36sdp"
        android:layout_marginLeft="@dimen/_36sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_bottom_sheet">
        <TextView
            android:text="@string/want_to_exit"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:padding="@dimen/_10sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#946C6B6B"/>
        <TextView
            android:id="@+id/btnExit"
            android:text="@string/exit"
            android:gravity="center"
            android:textColor="#FD1403"
            android:textSize="@dimen/_14sdp"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:layout_height="@dimen/_42sdp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:gravity="center"
        android:textColor="#02AEFB"
        android:textSize="@dimen/_14sdp"
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_36sdp"
        android:layout_marginLeft="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/shape_bottom_sheet"
        android:layout_height="@dimen/_42sdp"/>

</LinearLayout>