<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/_36sdp"
        android:layout_marginLeft="@dimen/_36sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_button_delete_dialog">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/want_to_delete"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:maxLines="2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray4"/>
        <TextView
            android:id="@+id/deleteItem"
            android:text="@string/delete"
            android:gravity="center"
            android:textColor="@color/red2"
            android:textSize="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:padding="@dimen/_10sdp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:gravity="center"
        android:textColor="@color/button"
        android:textSize="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_36sdp"
        android:layout_marginLeft="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/shape_bottom_sheet"
        android:layout_height="@dimen/_42sdp"/>

</LinearLayout>