<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutParents"
    android:layout_marginBottom="@dimen/_60sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_bottom_sheet_album">
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_to_album"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_gravity="center_horizontal"/>
        <RelativeLayout
            android:id="@+id/layoutLol"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_marginBottom="@dimen/_14sdp">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textColor="@color/button"
                android:textSize="@dimen/_14sdp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/button"
                android:text="@string/done"
                android:textSize="@dimen/_14sdp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_8sdp"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvAllItems"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_360sdp" />
        <TextView
            android:id="@+id/txtLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray4" />
        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/gray1"
            android:paddingBottom="@dimen/_6sdp"
            android:paddingTop="@dimen/_6sdp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_all_photos"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/button" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>