<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".albumsfragment.BinFragment"
    android:background="@color/white">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutSelectBin"/>
    <RelativeLayout
        android:id="@+id/toolbarRecently"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:visibility="visible">
        <TextView
            android:id="@+id/clickSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            android:textSize="@dimen/_14sdp"
            android:textColor="#0b8bf4"
            android:visibility="gone"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:id="@+id/clickBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_albums"
                android:textColor="#0b8bf4"
                android:textSize="@dimen/_14sdp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txtTitleBin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recently_deleted"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_18sdp"
            android:maxLines="1"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/clickSelect"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textColor="#0b8bf4"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/_14sdp"/>
        <TextView
            android:id="@+id/clickCloseSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="#0b8bf4"
            android:textSize="@dimen/_14sdp"
            android:visibility="gone"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutSelectBin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRecently"
        android:visibility="visible">
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:gravity="center"
            android:background="#EAEAEA"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvBin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="-1dp"
            android:layout_below="@+id/description"
            android:layout_above="@+id/layoutAll"/>
        <RelativeLayout
            android:id="@+id/layoutAll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_alignParentBottom="true"
            android:background="#F4F4F4">
            <TextView
                android:id="@+id/txtDeleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_all"
                android:textColor="#0b8bf4"
                android:layout_centerVertical="true"
                android:textSize="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_6sdp"/>
            <TextView
                android:id="@+id/txtRecoverAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recover_all"
                android:textColor="#0b8bf4"
                android:layout_centerVertical="true"
                android:textSize="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_6sdp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutViewItemBin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/layoutToolbarItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/clickBackSelected"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_back"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/dateAdded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="27/08/2021"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:textSize="@dimen/_14sdp"
                        android:maxLines="2"
                        android:layout_marginLeft="@dimen/_3sdp" />
                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:text="dasfasg"
                        android:textSize="@dimen/_12sdp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#946C6B6B"
                android:layout_gravity="bottom"/>
        </LinearLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerItemBin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/littleRcv"
            android:layout_below="@+id/layoutToolbarItem"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/littleRcv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/layoutItem"/>
        <RelativeLayout
            android:id="@+id/layoutItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_alignParentBottom="true"
            android:background="#F4F4F4">
            <TextView
                android:id="@+id/txtDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="#0b8bf4"
                android:layout_centerVertical="true"
                android:textSize="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_6sdp"/>
            <TextView
                android:id="@+id/txtRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recover"
                android:textColor="#0b8bf4"
                android:layout_centerVertical="true"
                android:textSize="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_6sdp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>